--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: background-color 0.5s ease;
+            position: relative; /* Make sure the container is a positioning context */
         }
 
         .container.dark-mode {
